--- a/pom.xml
+++ b/pom.xml
@@ -80,28 +80,11 @@
 			<version>${guava.version}</version>
 		</dependency>
 
-		<dependency>
-			<groupId>org.jacuzzi</groupId>
-			<artifactId>jacuzzi-common</artifactId>
-			<version>1.0.0</version>
-			<!--<scope>system</scope>-->
-			<!--<systemPath>D:\Waves\Jacuzzi 2.0\jacuzzi-common\out\artifacts\jacuzzi_common_jar\jacuzzi-common-1.0.0.jar</systemPath>-->
-			<!--<systemPath>D:\Waves\Jacuzzi 2.0\jacuzzi-common\target\jacuzzi-common-1.0.0.jar</systemPath>-->
-			<!--<exclusions>-->
-			<!--<exclusion>-->
-			<!--<groupId>org.slf4j</groupId>-->
-			<!--<artifactId>slf4j-log4j12</artifactId>-->
-			<!--</exclusion>-->
-			<!--<exclusion>-->
-			<!--<groupId>log4j</groupId>-->
-			<!--<artifactId>log4j</artifactId>-->
-			<!--</exclusion>-->
-			<!--<exclusion>-->
-			<!--<groupId>org.slf4j</groupId>-->
-			<!--<artifactId>slf4j-api</artifactId>-->
-			<!--</exclusion>-->
-			<!--</exclusions>-->
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>org.jacuzzi</groupId>-->
+			<!--<artifactId>jacuzzi-common</artifactId>-->
+			<!--<version>1.0.0</version>-->
+		<!--</dependency>-->
 
 		<dependency>
 			<groupId>org.slf4j</groupId>
